tests/rosetta/out/Fortran/apply-a-digital-filter-direct-form-ii-transposed-.error
gfortran: exit status 1
/tmp/apply-a-digital-filter-direct-form-ii-transposed-.f90:21:17:

   21 |     print *, res(((k)+1))
      |                 1
Error: Syntax error in PRINT statement at (1)
/tmp/apply-a-digital-filter-direct-form-ii-transposed-.f90:26:48:

   26 |   recursive integer function applyFilter(input,a,b) result(res)
      |                                                1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘a’ at (1)
/tmp/apply-a-digital-filter-direct-form-ii-transposed-.f90:26:50:

   26 |   recursive integer function applyFilter(input,a,b) result(res)
      |                                                  1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘b’ at (1)
/tmp/apply-a-digital-filter-direct-form-ii-transposed-.f90:26:46:

   26 |   recursive integer function applyFilter(input,a,b) result(res)
      |                                              1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘input’ at (1)
/tmp/apply-a-digital-filter-direct-form-ii-transposed-.f90:36:32:

   36 |       do while ((((j <= i) .and. j) < 4))
      |                                1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/apply-a-digital-filter-direct-form-ii-transposed-.f90:41:48:

   41 |       do while (((((j < i) .and. j) + 1) < size(a)))
      |                                                1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/apply-a-digital-filter-direct-form-ii-transposed-.f90:41:32:

   41 |       do while (((((j < i) .and. j) + 1) < size(a)))
      |                                1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/apply-a-digital-filter-direct-form-ii-transposed-.f90:33:24:

   33 |     do while ((i < size(input)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/apply-a-digital-filter-direct-form-ii-transposed-.f90:52:4:

   52 |     res = out
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/apply-a-digital-filter-direct-form-ii-transposed-.f90:18:20:

   18 |   res = applyFilter(sig,a,b)
      |                    1
Error: Rank mismatch in argument ‘input’ at (1) (scalar and rank-1)
/tmp/apply-a-digital-filter-direct-form-ii-transposed-.f90:18:24:

   18 |   res = applyFilter(sig,a,b)
      |                        1
Error: Rank mismatch in argument ‘a’ at (1) (scalar and rank-1)
/tmp/apply-a-digital-filter-direct-form-ii-transposed-.f90:18:26:

   18 |   res = applyFilter(sig,a,b)
      |                          1
Error: Rank mismatch in argument ‘b’ at (1) (scalar and rank-1)
/tmp/apply-a-digital-filter-direct-form-ii-transposed-.f90:20:22:

   20 |   do while ((k < size(res)))
      |                      1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
